--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ classifiers = [
 dependencies = [
     "OpenOrchestrator == 1.*",
     "Pillow == 9.5.0",
+    "selenium == 4.16.0",
+    "pypdf == 3.16.0"
 ]
 
 [project.optional-dependencies]
