--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "Pillow == 9.5.0",
     "selenium == 4.16.0",
     "pypdf == 3.16.0"
+    "itk_dev_shared_components == 2.4.*"
 ]
 
 [project.optional-dependencies]
