--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "robot_framework"
-version = "1.2.4"
+version = "1.3.0"
 authors = [
   { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
 ]
@@ -20,7 +20,8 @@ dependencies = [
     "Pillow == 9.5.0",
     "selenium == 4.16.0",
     "pypdf == 3.16.0",
-    "itk_dev_shared_components == 2.*"
+    "itk_dev_shared_components == 2.*",
+    "itk_dev_event_log == 1.*"
 ]
 
 [project.optional-dependencies]
